Revision history for Jasonify.

{{$NEXT}}

 - Use keymap functionality in Datify to support proper sorting of -Infinity,
   Infinity, and NaN.

v0.20.060 2020-02-29

 - Added LooksLike where it makes sense.

v0.20.052 2020-02-21

 - Another fix for long double support.

v0.20.050 2020-02-19

 - Datify requirement is v0.20.045.
 - Fixed tests for long double support.

v0.20.045 2020-02-14

 - Initial release.